--- a/backend/package.json
+++ b/backend/package.json
@@ -11,11 +11,18 @@
     "keywords": [],
     "description": "",
     "dependencies": {
-        "express": "^4.21.1"
+        "cors": "^2.8.5",
+        "dotenv": "^16.4.5",
+        "express": "^4.21.1",
+        "mysql2": "^3.11.4",
+        "sequelize": "^6.37.5"
     },
     "devDependencies": {
+        "@types/cors": "^2.8.17",
+        "@types/dotenv": "^8.2.3",
         "@types/express": "^5.0.0",
         "@types/node": "^22.9.0",
+        "@types/sequelize": "^4.28.20",
         "nodemon": "^3.1.7",
         "ts-node": "^10.9.2",
         "typescript": "^5.6.3"
