--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       - DB_HOST=db
       - DB_USER=root
       - DB_PASSWORD=password
-      - DB_NAME=mydatabase
+      - DB_NAME=database
     depends_on:
       - db
 
@@ -42,11 +42,29 @@ services:
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: password
-      MYSQL_DATABASE: mydatabase
+      MYSQL_DATABASE: database
     ports:
       - "3306:3306"
     volumes:
       - db_data:/var/lib/mysql
+    logging:
+      driver: "none"
+
+  # phpMyAdmin service
+  phpmyadmin:
+    image: phpmyadmin/phpmyadmin
+    container_name: phpmyadmin
+    restart: always
+    ports:
+      - "8080:80"
+    environment:
+      PMA_HOST: db
+      MYSQL_ROOT_PASSWORD: password
+    depends_on:
+      - db
+    logging:
+      driver: "none"
+
 
 volumes:
   db_data:
